[project]
name = "upgradelink-api-python"
version = "1.0.1"
description = "upgradelink-api-python"
authors = [
    {name = "toolsetlink",email = "toolsetlink@163.com"}
]
homepage = "https://github.com/toolsetlink/upgradelink-api-python"
repository = "https://github.com/toolsetlink/upgradelink-api-python"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "alibabacloud-tea>=0.2.0",
    "alibabacloud-tea-util>=0.3.0",
    "darabonba-base-python>=0.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
